# parsingAI

./: .gitignore  CLAUDE.md  ER_search_string.json  README.md  SN0025241W062R_parsing.txt  SN0025271W19FR_20260205分析.txt  calculate_token.py  colab.ipynb  compress.py  config.py  dataset_manual.py  event_flow.py  event_flow_GUI.py  index.html  main.py  prompts.py  related_code.md  requirements.txt  retriever_fw.py  server.py  test_parser.py
src/btn/: CMakeLists.txt  btn.c  btn_cmd.c  btn_cmd_rd.c  btn_cmd_wr.c  btn_cmd_wrls.c  btn_core.c  btn_dat.c  btn_share.c  crypto.c  crypto.h  trace-data
src/btn/dpe/: CMakeLists.txt  dpe.c  sync_dpe.c
src/btn/dtag/: CMakeLists.txt  dtag.c
src/btn/export/: bf_mgr.h  btn_export.h  dpe_export.h  dtag.h  l2p_mgr.h
src/btn/inc/: btn.h  btn_cmd.h  btn_cmd_data_reg.h  btn_dat.h  btn_ftl_ncl_reg.h  btn_precomp.h  dpe.h
src/btn/l2p/: CMakeLists.txt  l2p_mgr.c  l2p_setting.h  l2p_sw_q.c  l2p_sw_q.h
src/dispatcher/: CMakeLists.txt  bg_training.c  bg_training.h  btn_helper.h  helper.h  plp.c  plp.h  ra.c  ra.h  ramdisk.c  ramdisk_full.c  ramdisk_ns.c  rawdisk.c  rawdisk_be.c  rawdisk_fe.c  rawdisk_hmb_dtag.h  rawdisk_l2p.h  rawdisk_mpc.h  rdisk.c  rdisk.h  rdisk_be.c  trace-data  trim.c  trim.h  ucache.c  ucache.h  vdisk.c
src/fcore/: CMakeLists.txt  be_main.c  erase.c  fcprecomp.h  ftl_core.c  ftl_core.h  ftl_core_gc.c  ftl_core_ipc.c  ftl_core_pmu.c  ftl_p2l.c  ftl_p2l.h  ftl_raid.c  ftl_raid.h  pstream.c  pstream.h  trace-data
src/fcore/export/: erase.h  fc_export.h  ftl_remap.h
src/ftl/: CMakeLists.txt  ErrorHandle.c  ErrorHandle.h  bg_task.c  bg_task.h  blk_log.c  blk_log.h  blk_pool.c  blk_pool.h  defect_mgr.c  defect_mgr.h  fe_info.c  fe_info.h  frb_log.c  frb_log.h  ftl.c  ftl.h  ftl_flash_geo.h  ftl_flush.c  ftl_host_ns.c  ftl_int_ns.c  ftl_l2p.c  ftl_l2p.h  ftl_ns.c  ftl_ns.h  ftl_pmu.c  ftl_spor.c  ftl_spor.h  ftlprecomp.h  gc.c  gc.h  log_flush.c  log_flush.h  ncl_helper.h  recon.c  recon.h  spb_info.c  spb_info.h  spb_log_flush.c  spb_log_flush.h  (+7 more)
src/ftl/export/: ftl_error.h  ftl_export.h  ftl_meta.h  ftltype.h  log.c  log.h  spb_log.c  spb_log.h  sync_ncl_helper.c  sync_ncl_helper.h
src/ncl_20/: CMakeLists.txt  GList.c  GList.h  ard.h  eccu.c  eccu.h  epm.c  ficu.c  ficu.h  finstr.h  nand.c  nand.h  nand_cfg.h  nand_define.h  nand_onfi.c  nand_onfi.h  nand_toggle.c  nand_toggle.h  ncl.c  ncl.h  ncl_cache_read.c  ncl_cache_read.h  ncl_cmd.c  ncl_cmd.h  ncl_erd.c  ncl_erd.h  ncl_err.h  ncl_exports.h  ncl_header.pch  ncl_pmu.c  ncl_raid.c  ncl_raid.h  ncl_todo.c  ndcmd_fmt.h  ndcmd_fmt_common.h  ndcu.c  ndcu.h  ndphy.c  ndphy.h  read_retry.c  (+3 more)
src/ncl_20/cmf/: cmf.h
src/ncl_20/cmf/tacoma/: tacoma_cmf.h
src/ncl_20/cmf/tacoma/a0_svn784/: DEC_CMF_code291_ver01.h  DEC_CMF_code31_ver01.h  DEC_CMF_code62_ver01.h  DEC_CMF_code66_ver01.h  ENC_CMF_code291_ver01.h  (+10 more)
src/ncl_20/debug/: ncb_register.c  ncl_console.c
src/ncl_20/feature/: ncl_onfi_dcc_training.c  ncl_onfi_dcc_training.h
src/ncl_20/inc/: dec_top_ctrl_register.h  eccu_bch_dec_register.h  eccu_bch_enc_register.h  eccu_ldpc_enc_register.h  eccu_mdec_register.h  eccu_misr_register.h  eccu_pdec_register.h  eccu_reg_access.h  ficu_reg_access.h  ncb_crypto_register.h  ncb_eccu_register.h  ncb_ficu_register.h  ncb_misc_register.h  ncb_ndcu_register.h  ncb_top_wrap_reg_register.h  ndcu_reg_access.h  ndphy_register.h  raid_top_register.h
src/ncl_20/test/: nand_cache_prog_test.c  nand_cache_read_test.c  nand_time_measure.c  ncl_regression.c  ncl_test.c  tune_vref.c  tune_vref_shift.c
src/nvme/: CMakeLists.txt  trace-data
src/nvme/apl/decoder/: admin_cmd.c  bigdigits.c  bigdigits.h  core.c  hmb_cmd.c  io_cmd.c  nvme_security.h  nvmet.h  opal_ssc.h  security_api.c  security_api.h  security_cmd.h  security_test.c  smart.c  smart.h  ssstc_cmd.c  ssstc_cmd.h  token.c  token.h
src/nvme/export/: hmb_cmd.h
src/nvme/hal/: cmd_proc.c  ctrlr.c  hmb.c
src/nvme/inc/: cmd_proc.h  hal_nvme.h  hmb.h  nvme_apl.h  nvme_cfg.h  nvme_decoder.h  nvme_precomp.h  nvme_reg_access.h  nvme_spec.h  req.h
src/nvme/inc/registers/: common_ctrl.h  flex_addr.h  flex_dbl.h  flex_map.h  flex_misc.h  pf_reg.h  port_ctrl.h  vf_reg.h
src/rtos/: CMakeLists.txt  trace-data
src/rtos/armv7r/: atomic.h  bitops.S  bitops.h  bucket.c  cbf.h  common_cfg_register.h  cpu1_cfg_register.h  cpu_msg.c  cpu_msg.h  ddr.c  ddr.h  ddr_info.h  ddr_top_register.h  dma.h  hiber.S  io.h  ipc.c  ipc.h  ipc_helper.c  ipc_register.h  irq.c  irq.h  itrng_reg.h  l2cache.c  l2cache.h  l2cache_register.h  mc_reg.h  misc.c  misc.h  misc_register.h  mpu.c  otp_ctrl_register.h  pcie.c  pcie_core_register.h  pcie_wrapper_register.h  pic.c  pic.h  pmu.c  pmu.h  regulator.c  (+18 more)
src/rtos/inc/: assert.h  bucket.h  console.h  crc16.h  crc32.h  ctype.h  endian.h  errno.h  event.h  fsm.h  heap.h  list.h  mpu.h  pool.h  queue.h  rainier_soc.h  sect.h  stat_head.h  stdio.h  stdlib.h  string.h  task.h  tk.h  types.h
src/rtos/src/: console.c  crc16.c  crc32.c  event.c  fsm.c  heap.c  pool.c  rtos.c  stat_head.c  stdio.c  string.c  task.c  xmodem.c
src/scheduler/: CMakeLists.txt  addr_trans.c  addr_trans.h  die_que.c  die_que.h  read_error.c  read_error.h  scheduler.c  scheduler.h  trace-data
src/spi/: CMakeLists.txt  spi.c  spi.h  spi_register.h  trace-data
src/srb/: CMakeLists.txt  a0_rom_10011.h  fw_download.c  srb.c  srb.h  trace-data
src/tcg/: CMakeLists.txt  opal_ssc.h  pbkdf2_sha256.c  tcg.c  tcg.h  tcg_if_nf_api.c  tcg_if_nf_api.h  tcg_if_vars.c  tcg_if_vars.h  tcg_nf_hal.c  tcg_nf_hal.h  tcg_nf_mid.c  tcg_nf_mid.h  tcg_sh_vars.c  tcg_sh_vars.h  tcg_sys_info.h  tcgcommon.h  tcgnvme.c  tcgnvme.h  tcgtbl.c  tcgtbl.h  trace-data
src/utils/: CMakeLists.txt  evlog.c  flog.c  idx_meta.c  ipc_api.c  mpc.c  trace-data  trace.c
src/utils/dfi/: CMakeLists.txt  dfi_calvl_seq.c  dfi_common.c  dfi_common.h  dfi_config.h  dfi_console.c  dfi_dpe_seq.c  dfi_init.c  dfi_init.h  dfi_pad_cal_seq.c  dfi_rdlvl_gate_seq.c  dfi_rdlvl_seq.c  dfi_reg.h  dfi_vref_dq_seq.c  dfi_wr_dqdqs_dly_seq.c  dfi_wrlvl_seq.c  dfi_wrtrain_seq.c  mc_config.h
(+104 files in other folders)
